v0.8.0
- fix weather.data file creation
- fix Daily.{no}.HighTemperature and Daily.{no}.LowTemperature values being swapped
v0.7.1
- fix some syntax errors on python 3.11
- check addon_data path exists
v0.7.0
- Changed default cache lifetime.
- Provided setting for cache lifetime.
- Fixed some error with caching of weather data.
v0.6.0
- Fixed problem if no station was selected.
- Added cache for weather data.
- Used locale date format for all dates.
v0.5.0
- Refactored addon.
v0.4.0
- Cleaned up translations.
- Fixed error with forecast.
v0.3.0
- Fixed some label names and data conversions. 
- Added icon paths for weather conditions.
- Improved settings page.
v0.2.0
- Fixed settings to allow four locations.
- Added more data points.
- Improved parsing of weather data.
v0.1.0
- Initial release.