@@ -1,6 +1,7 @@
 v0.8.0
 - fix weather.data file creation
 - fix Daily.{no}.HighTemperature and Daily.{no}.LowTemperature values being swapped
+- fix missing measurement units for Daily.{no}.WindSpeed, Daily.{no}.HighTemperature and Daily.{no}.LowTemperature
 v0.7.1
 - fix some syntax errors on python 3.11
 - check addon_data path exists
